adjusting application visibility based on logged in status and fixing a bug with the sitecore logo in the man nav on sub pages

--- a/src/Project/MvpSite/rendering/wwwroot/sass/components/application.scss
+++ b/src/Project/MvpSite/rendering/wwwroot/sass/components/application.scss
@@ -72,6 +72,9 @@ section.application-form {
     }
 }
 
+.application-visibility{
+    display:none;
+}
 
 #application-form {
     text-align: center;
